--- a/OnTopScreenCapture/OnTopScreenCapture.csproj
+++ b/OnTopScreenCapture/OnTopScreenCapture.csproj
@@ -67,7 +67,7 @@
     <GenerateManifests>true</GenerateManifests>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -95,11 +95,15 @@
     <Compile Include="Capture\ScreenCapture.cs" />
     <Compile Include="Util\Enums\DWMWindowAttribute.cs" />
     <Compile Include="Util\Enums\GetAncestorFlags.cs" />
+    <Compile Include="Util\Enums\GetWindowCmd.cs" />
     <Compile Include="Util\Enums\GWL.cs" />
+    <Compile Include="Util\Enums\WindowsMessage.cs" />
     <Compile Include="Util\Enums\WindowStyle.cs" />
     <Compile Include="Util\ExternalFuncApi.cs" />
     <Compile Include="Util\MonitorInfo.cs" />
+    <Compile Include="Util\ProcessExtensions.cs" />
     <Compile Include="Util\WindowHelper.cs" />
+    <Compile Include="Util\WindowInfo.cs" />
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -131,7 +135,6 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <None Include="OnTopScreenCapture_TemporaryKey.pfx" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
